--- a/back/admin.css
+++ b/back/admin.css
@@ -66,12 +66,6 @@
 	border-bottom-right-radius:3px;
 }
 
-.upload_td {
-	text-align:left;
-	padding:0;
-	margin:0;
-}
-
 .upload_label {
 	display:inline-block;
 	cursor:pointer;
@@ -81,7 +75,7 @@
 	font:normal 13px verdana;
 	color:#555555;
 	background-color:#efefef;
-	padding:7px 20px 8px 20px;
+	padding:7px 15px 8px 15px;
 	border-radius:3px;
 	margin:0;
 	transition-duration: 0.4s;
@@ -106,7 +100,6 @@
 	background-color:#fff;
 	padding:4px 5px 4px 5px;
 	border-radius:3px;
-	
 }
 
 .miter_user_submit {
@@ -116,32 +109,13 @@
 	font:normal 13px verdana;
 	color:#000;
 	background-color:#efefef;
-	padding:7px 45px 8px 40px;
-	border-top-right-radius:3px;
-	border-bottom-right-radius:3px;
+	padding:7px 50px 8px 50px;
+	border-radius:3px;
 	cursor:pointer;
 	transition-duration: 0.4s;
 }
 
 .miter_user_submit:hover {
-	background-color:#dfdfdf;
-}
-
-.thread_submit {
-	border-width:1px 0px 1px 1px;
-	border-style:solid;
-	border-color:#D5D5D5;
-	font:normal 13px verdana;
-	color:#000;
-	background-color:#efefef;
-	padding:7px 11px 8px 11px;
-	border-top-left-radius:3px;
-	border-bottom-left-radius:3px;
-	cursor:pointer;
-	transition-duration: 0.4s;
-}
-
-.thread_submit:hover {
 	background-color:#dfdfdf;
 }
 
@@ -202,10 +176,34 @@
 	border-collapse:separate;
 }
 
+.sub_url_table {
+	width:100%;
+	border:0px solid #AAA;
+	background-color:#FFF;
+	padding:0;
+	margin:0;
+	border-spacing:0;
+	border-collapse:separate;
+}
+
+.sub_url_td_left {
+	width:100%;
+	text-align:left;
+	vertical-align:middle;
+	padding:0px 9px 0px 0px;
+	margin:0;
+}
+
+.sub_url_td_right {
+	vertical-align:middle;
+	padding:0;
+	margin:0;
+}
+
 .miter_url_field {
 	width:100%;
 	font:normal 13px verdana;
-	color:#C5C5C5;
+	color:#888888;
 	border:1px solid #D5D5D5;
 	padding:8px 8px 8px 8px;
 	background-color:#FFF;
